--- a/src/sass/layout/_about-us.scss
+++ b/src/sass/layout/_about-us.scss
@@ -12,6 +12,12 @@
       letter-spacing: 0.03em;
     }
 
+    .list{
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
     .item {
       padding: 30px 10px 25px 10px;
       text-align: center;
@@ -190,8 +196,8 @@
       font-family: Montserrat;
       font-style: normal;
       font-weight: 800;
-      font-size: 20px;
-      line-height: 1.3;
+      font-size: 46px;
+      line-height: 1.304;
       letter-spacing: 0.03em;
     }
 
