--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,4 +1,5 @@
 .footer {
+  position: relative;
   padding-top: 30px;
   padding-bottom: 30px;
   text-align: center;
@@ -26,4 +27,11 @@
 .icon-instagram {
   display: block;
   margin: 0 auto;
+}
+.copyright {
+  min-width: 320px;
+  padding-top: 21px;
+  padding-bottom: 21px;
+  color: $primary-text-color;
+  background-color: $bg-color;
 }
