--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -34,6 +34,7 @@
 .icon-instagram {
   display: block;
   margin: 0 auto;
+  max-width: 40px;
 }
 .copyright {
   color: $primary-text-color;
@@ -70,6 +71,8 @@
   .telephone {
     font-size: 20px;
     line-height: 1.8;
+    margin-top: 0px;
+    margin-bottom: 0px;
   }
 
   .telephone::after {
@@ -114,6 +117,8 @@
     line-height: 1.2;
 
     letter-spacing: 0.08em;
+    margin-top: 0px;
+    margin-bottom: 0px;
   }
   .telephone::after {
     content: '';
