--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,5 +1,6 @@
 $primary-text-color: #b9b9b9;
 $secondary-text-color: #111518;
+$text-dark-color: #3d3d3d;
 $accent: #ff6b09;
 $white: #ffffff;
 $bg-color: #111518;
