--- a/src/sass/layout/_guarantees.scss
+++ b/src/sass/layout/_guarantees.scss
@@ -22,5 +22,5 @@
   margin-bottom: 23px;
 }
 .guarantees-list {
-  list-style-image: url(../../images/campfire-2.svg);
+  list-style-image: url(./../images/campfire-2.svg);
 }
