--- a/src/sass/layout/_pluses.scss
+++ b/src/sass/layout/_pluses.scss
@@ -4,10 +4,6 @@
   color: $white;
 }
 .container-pluses .pluses-list {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 30px;
-  padding-right: 15px;
   background-color: $white;
   box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
 }
@@ -15,7 +11,12 @@
   .container-pluses .title {
     width: 50%;
   }
-
+  .container-pluses .pluses-list {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 30px;
+    padding-right: 15px;
+  }
   .pluses-item:not(:last-child) {
     margin-bottom: 20px;
   }
@@ -54,13 +55,27 @@
   .pluses-list {
     display: flex;
     flex-wrap: wrap;
-    padding-left: 84px;
     padding-top: 70px;
+    padding-left: 84px;
     padding-bottom: 70px;
     padding-right: 82px;
   }
 
   .pluses-item {
     width: calc((100% - 80px) / 3);
+    &:not(:nth-child(3n)) {
+      margin-right: 40px;
+    }
+    &:nth-child(2) {
+      margin-bottom: 32px;
+    }
+    .number {
+      font-size: 20px;
+      line-height: 1.649;
+    }
+    .subtitle {
+      font-size: 20px;
+      line-height: 1.4;
+    }
   }
 }
