--- a/src/sass/layout/_program.scss
+++ b/src/sass/layout/_program.scss
@@ -56,21 +56,22 @@
       background-repeat: no-repeat;
       background-position-y: 76%;
       background-position-x: 100%;
-      .program-list::before {
-        content: '';
-        position: absolute;
-        top: 8px;
-        left: 0px;
-        width: 1px;
-        height: 92%;
-        background-color: $white;
-      }
-      &-list {
-        position: relative;
-        padding-left: 26px;
-        margin-left: 74px;
-      }
     }
+    .program-list::before {
+      content: '';
+      position: absolute;
+      top: 8px;
+      left: 0px;
+      width: 1px;
+      height: 92%;
+      background-color: $white;
+    }
+    &-list {
+      position: relative;
+      padding-left: 26px;
+      margin-left: 74px;
+    }
+
     .program-feature {
       position: relative;
       .program-subtitle {
@@ -160,6 +161,10 @@
 }
 
 @media screen and (min-width: 1353px) {
+  .container-program {
+    padding-bottom: 163px;
+  }
+
   .program {
     position: relative;
     padding-top: 120px;
@@ -182,7 +187,6 @@
   }
 
   .program-list {
-    margin-bottom: 60px;
     display: flex;
   }
   .program-feature {
@@ -212,8 +216,8 @@
     .program-accent {
       margin-bottom: 10px;
     }
+    .program-text {
+      max-width: 180px;
+    }
   }
-  // .program-list::before {
-  //   display: none;
-  // }
 }
