--- a/src/sass/components/_title-and-text.scss
+++ b/src/sass/components/_title-and-text.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
