--- a/src/sass/layout/_about-us.scss
+++ b/src/sass/layout/_about-us.scss
@@ -12,7 +12,7 @@
       letter-spacing: 0.03em;
     }
 
-    .list{
+    .list {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
@@ -91,6 +91,7 @@
 
 @media screen and (min-width: 728px) {
   .about-us {
+    padding-top: 50px;
     padding-bottom: 50px;
 
     .title {
@@ -161,7 +162,6 @@
       font-weight: bold;
       font-size: 14px;
       line-height: 1.428;
-      /* or 143% */
 
       letter-spacing: 0.08em;
       margin-bottom: 42px;
@@ -188,6 +188,7 @@
 
 @media screen and (min-width: 1354px) {
   .about-us {
+    padding-top: 130px;
     padding-bottom: 130px;
 
     .title {
@@ -196,7 +197,7 @@
       font-family: Montserrat;
       font-style: normal;
       font-weight: 800;
-      font-size: 20px;
+      font-size: 46px;
       line-height: 1.3;
       letter-spacing: 0.03em;
     }
