--- a/src/sass/layout/_program.scss
+++ b/src/sass/layout/_program.scss
@@ -28,7 +28,6 @@
     font-size: 20px;
     line-height: 1.3;
     text-align: center;
-    text-transform: uppercase;
     letter-spacing: 0.03em;
     color: $white;
     margin-bottom: 50px;
@@ -178,8 +177,6 @@
       background-color: $white;
     }
     &-title {
-      position: relative;
-      text-transform: uppercase;
       text-align: start;
       font-size: 46px;
       margin-bottom: 100px;
@@ -214,10 +211,14 @@
       margin-bottom: 25px;
     }
     .program-accent {
+      font-size: 20px;
+      line-height: 1.649;
       margin-bottom: 10px;
     }
     .program-text {
       max-width: 180px;
+      font-size: 18px;
+      line-height: 1.56;
     }
   }
 }
