--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -64,13 +64,13 @@
   border-radius: 50%;
   cursor: pointer;
 
-  .icon-close {
+  .icon-close-modal {
     fill: $white;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
-  &:hover .icon-close,
-  &:focus .icon-close {
+  &:hover .icon-close-modal,
+  &:focus .icon-close-modal {
     fill: $accent;
   }
 }
