--- a/src/sass/layout/_slider.scss
+++ b/src/sass/layout/_slider.scss
@@ -1,34 +1,32 @@
-@media screen and (max-width:727px){
-
-  .section-slider{
-    .title{
+@media screen and (max-width: 727px) {
+  .section-slider {
+    .title {
       font-family: Montserrat;
       font-style: normal;
       font-weight: 800;
       font-size: 20px;
       line-height: 130%;
       /* or 26px */
-      
+
       text-align: center;
       letter-spacing: 0.03em;
       margin-bottom: 20px;
     }
   }
 
-  .main-slider{
+  .main-slider {
     box-shadow: -5px -70px 26px rgba(0, 0, 0, 0.04);
   }
 
   .slider {
     position: relative;
     display: flex;
-    justify-content: center; 
+    justify-content: center;
     overflow: hidden;
     max-width: 100%;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 130px;
-    
   }
 
   /* стили для обёртки, в которой заключены слайды */
@@ -37,7 +35,6 @@
     overflow: hidden;
     width: 280px;
     height: 682px;
-    
   }
 
   /* стили для контейнера слайдов */
@@ -54,11 +51,10 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 20px 20px 20px 30px ;
+    padding: 20px 20px 20px 30px;
     flex: 0 0 100%;
     max-width: 280px;
     // box-shadow: -5px 21px 26px rgba(0, 0, 0, 0.04);
-
   }
 
   /* стили для кнопок "вперед" и "назад" */
@@ -69,7 +65,7 @@
     align-items: center;
     justify-content: center;
     width: 40px;
-   
+
     text-align: center;
     opacity: 0.5;
     height: 50px;
@@ -89,7 +85,6 @@
   }
 
   .slider__control_prev {
-    
     left: -2px;
   }
 
@@ -134,7 +129,7 @@
     flex: 0 1 auto;
     width: 54px;
     height: 54px;
-    border-radius: 50%;;
+    border-radius: 50%;
     margin-right: 3px;
     margin-left: 3px;
     text-indent: -999px;
@@ -143,34 +138,32 @@
     background-clip: padding-box;
     border-top: 10px solid transparent;
     border-bottom: 10px solid transparent;
-    
-    &:nth-child(1){
+
+    &:nth-child(1) {
       background-image: url(./../images/slider/1.jpg);
     }
-    &:nth-child(2){
+    &:nth-child(2) {
       background-image: url(./../images/slider/2.jpg);
     }
-    &:nth-child(3){
+    &:nth-child(3) {
       background-image: url(./../images/slider/3.jpg);
     }
-    &:nth-child(4){
+    &:nth-child(4) {
       display: none;
       background-image: url(./../images/slider/4.jpg);
     }
-    &:nth-child(5){
+    &:nth-child(5) {
       display: none;
       background-image: url(./../images/slider/5.jpg);
     }
-    &:nth-child(6){
+    &:nth-child(6) {
       display: none;
       background-image: url(./../images/slider/6.jpg);
     }
-    &:nth-child(7){
+    &:nth-child(7) {
       display: none;
       background-image: url(./../images/slider/7.jpg);
     }
-    
-
   }
 
   .slider__indicators li.active {
@@ -184,36 +177,35 @@
     max-width: 100%;
   }
 
-  .left-side{
+  .left-side {
     display: flex;
     flex-flow: column;
     justify-content: center;
 
-    .images-top{
+    .images-top {
       width: 90px;
       padding-bottom: 20px;
     }
 
-    .images-bottom{
+    .images-bottom {
       padding-bottom: 20px;
     }
   }
 
-  .right-side{
-    .title{
-
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 800;
-    font-size: 14px;
-    line-height: 1.214;
-    margin-bottom: 10px;
-    /* identical to box height */
-    letter-spacing: 0.08em;
-    color: $accent;
+  .right-side {
+    .title {
+      font-family: Montserrat;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 14px;
+      line-height: 1.214;
+      margin-bottom: 10px;
+      /* identical to box height */
+      letter-spacing: 0.08em;
+      color: $accent;
     }
 
-    .text-top{
+    .text-top {
       font-family: Montserrat;
       font-style: normal;
       font-weight: 500;
@@ -224,7 +216,7 @@
       margin-bottom: 10px;
     }
 
-    .text-bottom{
+    .text-bottom {
       font-family: Montserrat;
       font-style: normal;
       font-weight: 500;
@@ -232,60 +224,56 @@
       line-height: 1.666;
 
       text-align: center;
-      color:$secondary-text-color ;
+      color: $secondary-text-color;
     }
 
-    .accent{
+    .accent {
       text-decoration: underline;
     }
   }
 }
 
-@media screen and (min-width:728px){
-  .section-slider{
-    .title{
+@media screen and (min-width: 728px) {
+  .section-slider {
+    .title {
       font-family: Montserrat;
       font-style: normal;
       font-weight: 800;
       font-size: 20px;
       line-height: 130%;
       /* or 26px */
-      
+
       text-align: center;
       letter-spacing: 0.03em;
       margin-bottom: 30px;
     }
   }
 
-  .main-slider{
+  .main-slider {
     position: relative;
 
-
-    .title{
+    .title {
       font-family: Montserrat;
       font-style: normal;
       font-weight: 800;
       font-size: 26px;
       line-height: 1.304;
       /* or 34px */
-      
+
       letter-spacing: 0.03em;
       margin-bottom: 20px;
     }
-
-
   }
 
   .slider {
     // position: relative;
     display: flex;
-    justify-content: center; 
+    justify-content: center;
     overflow: hidden;
     max-width: 100%;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 130px;
-    
   }
 
   /* стили для обёртки, в которой заключены слайды */
@@ -309,19 +297,18 @@
     display: flex;
     justify-content: space-between;
 
-    padding: 40px ;
+    padding: 40px;
     flex: 0 0 100%;
     min-width: 280px;
     box-shadow: -5px 21px 26px rgba(0, 0, 0, 0.04);
 
-    .left-side{
-      // width: 2360px;
-    }
+    // .left-side{
+    // width: 2360px;
+    // }
 
-    .right-side{
+    .right-side {
       width: 412px;
     }
-
   }
 
   /* стили для кнопок "вперед" и "назад" */
@@ -332,7 +319,7 @@
     align-items: center;
     justify-content: center;
     width: 40px;
-   
+
     text-align: center;
     opacity: 0.5;
     height: 50px;
@@ -352,7 +339,6 @@
   }
 
   .slider__control_prev {
-    
     left: -2px;
   }
 
@@ -397,7 +383,7 @@
     flex: 0 1 auto;
     width: 54px;
     height: 54px;
-    border-radius: 50%;;
+    border-radius: 50%;
     margin-right: 3px;
     margin-left: 3px;
     text-indent: -999px;
@@ -406,30 +392,28 @@
     background-clip: padding-box;
     border-top: 10px solid transparent;
     border-bottom: 10px solid transparent;
-    
-    &:nth-child(1){
+
+    &:nth-child(1) {
       background-image: url(./../images/slider/1.jpg);
     }
-    &:nth-child(2){
+    &:nth-child(2) {
       background-image: url(./../images/slider/2.jpg);
     }
-    &:nth-child(3){
+    &:nth-child(3) {
       background-image: url(./../images/slider/3.jpg);
     }
-    &:nth-child(4){
+    &:nth-child(4) {
       background-image: url(./../images/slider/4.jpg);
     }
-    &:nth-child(5){
+    &:nth-child(5) {
       background-image: url(./../images/slider/5.jpg);
     }
-    &:nth-child(6){
+    &:nth-child(6) {
       background-image: url(./../images/slider/6.jpg);
     }
-    &:nth-child(7){
+    &:nth-child(7) {
       background-image: url(./../images/slider/7.jpg);
     }
-    
-
   }
 
   .slider__indicators li.active {
@@ -443,36 +427,36 @@
     max-width: 100%;
   }
 
-  .left-side{
+  .left-side {
     display: flex;
     flex-flow: column;
     justify-content: center;
 
-    .images-top{
+    .images-top {
       width: 150px;
       padding-bottom: 20px;
     }
 
-    .images-bottom{
+    .images-bottom {
       padding-bottom: 20px;
     }
   }
 
-  .right-side{
-    .title{
+  .right-side {
+    .title {
       text-align: start;
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 800;
-    font-size: 20px;
-    line-height: 1.2;
-    margin-bottom: 10px;
-    /* identical to box height */
-    letter-spacing: 0.08em;
-    color: $accent;
+      font-family: Montserrat;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 20px;
+      line-height: 1.2;
+      margin-bottom: 10px;
+      /* identical to box height */
+      letter-spacing: 0.08em;
+      color: $accent;
     }
 
-    .text-top{
+    .text-top {
       font-family: Montserrat;
       font-style: normal;
       font-weight: 500;
@@ -483,7 +467,7 @@
       margin-bottom: 10px;
     }
 
-    .text-bottom{
+    .text-bottom {
       font-family: Montserrat;
       font-style: normal;
       font-weight: 500;
@@ -491,62 +475,56 @@
       line-height: 1.666;
 
       text-align: start;
-      color:$secondary-text-color ;
-
-      
+      color: $secondary-text-color;
     }
 
-    .accent{
+    .accent {
       text-decoration: underline;
     }
   }
 }
 
-@media screen and (min-width:1354px){
-  .section-slider{
-    .title{
+@media screen and (min-width: 1354px) {
+  .section-slider {
+    .title {
       font-family: Montserrat;
       font-style: normal;
       font-weight: 800;
       font-size: 46px;
       line-height: 1.304;
       /* or 26px */
-      
+
       text-align: center;
       letter-spacing: 0.03em;
       margin-bottom: 50px;
     }
   }
 
-  .main-slider{
+  .main-slider {
     position: relative;
 
-
-    .title{
+    .title {
       font-family: Montserrat;
       font-style: normal;
       font-weight: 800;
       font-size: 26px;
       line-height: 1.304;
       /* or 34px */
-      
+
       letter-spacing: 0.03em;
       margin-bottom: 20px;
     }
-
-
   }
 
   .slider {
     // position: relative;
     display: flex;
-    justify-content: center; 
+    justify-content: center;
     overflow: hidden;
     max-width: 100%;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 130px;
-    
   }
 
   /* стили для обёртки, в которой заключены слайды */
@@ -570,19 +548,18 @@
     display: flex;
     justify-content: space-around;
 
-    padding: 40px ;
+    padding: 40px;
     flex: 0 0 100%;
     min-width: 280px;
     box-shadow: -5px 21px 26px rgba(0, 0, 0, 0.04);
 
-    .left-side{
-      // width: 2360px;
-    }
+    // .left-side{
+    // width: 2360px;
+    // }
 
-    .right-side{
+    .right-side {
       width: 706px;
     }
-
   }
 
   /* стили для кнопок "вперед" и "назад" */
@@ -593,7 +570,7 @@
     align-items: center;
     justify-content: center;
     width: 40px;
-   
+
     text-align: center;
     opacity: 0.5;
     height: 50px;
@@ -613,7 +590,6 @@
   }
 
   .slider__control_prev {
-    
     left: 20px;
   }
 
@@ -658,7 +634,7 @@
     flex: 0 1 auto;
     width: 54px;
     height: 54px;
-    border-radius: 50%;;
+    border-radius: 50%;
     margin-right: 3px;
     margin-left: 3px;
     text-indent: -999px;
@@ -667,30 +643,28 @@
     background-clip: padding-box;
     border-top: 10px solid transparent;
     border-bottom: 10px solid transparent;
-    
-    &:nth-child(1){
+
+    &:nth-child(1) {
       background-image: url(./../images/slider/1.jpg);
     }
-    &:nth-child(2){
+    &:nth-child(2) {
       background-image: url(./../images/slider/2.jpg);
     }
-    &:nth-child(3){
+    &:nth-child(3) {
       background-image: url(./../images/slider/3.jpg);
     }
-    &:nth-child(4){
+    &:nth-child(4) {
       background-image: url(./../images/slider/4.jpg);
     }
-    &:nth-child(5){
+    &:nth-child(5) {
       background-image: url(./../images/slider/5.jpg);
     }
-    &:nth-child(6){
+    &:nth-child(6) {
       background-image: url(./../images/slider/6.jpg);
     }
-    &:nth-child(7){
+    &:nth-child(7) {
       background-image: url(./../images/slider/7.jpg);
     }
-    
-
   }
 
   .slider__indicators li.active {
@@ -704,36 +678,36 @@
     max-width: 100%;
   }
 
-  .left-side{
+  .left-side {
     display: flex;
     flex-flow: column;
     justify-content: center;
 
-    .images-top{
+    .images-top {
       width: 150px;
       padding-bottom: 20px;
     }
 
-    .images-bottom{
+    .images-bottom {
       padding-bottom: 20px;
     }
   }
 
-  .right-side{
-    .title{
-    text-align: start;
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 800;
-    font-size: 30px;
-    line-height: 1.233;
-    margin-bottom: 10px;
-    /* identical to box height */
-    letter-spacing: 0.08em;
-    color: $accent;
+  .right-side {
+    .title {
+      text-align: start;
+      font-family: Montserrat;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 30px;
+      line-height: 1.233;
+      margin-bottom: 10px;
+      /* identical to box height */
+      letter-spacing: 0.08em;
+      color: $accent;
     }
 
-    .text-top{
+    .text-top {
       font-family: Montserrat;
       font-style: normal;
       font-weight: 500;
@@ -744,7 +718,7 @@
       margin-bottom: 10px;
     }
 
-    .text-bottom{
+    .text-bottom {
       font-family: Montserrat;
       font-style: normal;
       font-weight: 500;
@@ -752,14 +726,11 @@
       line-height: 1.555;
 
       text-align: start;
-      color:$secondary-text-color ;
-
-      
+      color: $secondary-text-color;
     }
 
-    .accent{
+    .accent {
       text-decoration: underline;
     }
   }
 }
-
