добавил паддинги топ на сецию отзывы

--- a/src/sass/layout/_slider.scss
+++ b/src/sass/layout/_slider.scss
@@ -1,5 +1,6 @@
 @media screen and (max-width: 727px) {
   .section-slider {
+    padding-top: 50px;
     .title {
       font-family: Montserrat;
       font-style: normal;
@@ -235,6 +236,7 @@
 
 @media screen and (min-width: 728px) {
   .section-slider {
+    padding-top: 50px;
     .title {
       font-family: Montserrat;
       font-style: normal;
@@ -486,6 +488,7 @@
 
 @media screen and (min-width: 1354px) {
   .section-slider {
+    padding-top: 130px;
     .title {
       font-family: Montserrat;
       font-style: normal;
