--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -131,8 +131,8 @@
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-input:hover + .modal-icon,
-.form-input:focus + .modal-icon {
+.form-input:hover+.modal-icon,
+.form-input:focus+.modal-icon {
   fill: $accent;
 }
 
@@ -183,35 +183,51 @@
 }
 
 .form-label-checkbox {
-  display: flex;
-  align-items: center;
-  align-items: center;
-  justify-content: center;
+  // display: flex;
+  // align-items: center;
+  // align-items: center;
+  // justify-content: center;
+  text-align: center;
+  cursor: pointer;
 
-  font-size: 8px;
+  font-size: 10px;
   // font-size: 11px;
 
   @media screen and (min-width: 728px) {
     font-size: 11px;
+    text-align: left;
   }
 
   @media screen and (min-width: 1354px) {
     font-size: 14px;
   }
 
-  &::before {
-    display: block;
-    content: '';
-    width: 16px;
-    height: 15px;
-    margin-right: 8px;
+  // &::before {
+  //   display: block;
+  //   content: '';
+  //   width: 16px;
+  //   height: 15px;
+  //   margin-right: 8px;
 
-    border: 1px solid $primary-text-color;
-    border-radius: 4px;
-  }
+  //   border: 1px solid $primary-text-color;
+  //   border-radius: 4px;
+  // }
 }
 
-.checkbox-input:checked + .form-label-checkbox::before {
+.checkbox-icon {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 16px;
+  height: 15px;
+  margin-right: 8px;
+
+  border: 1px solid $primary-text-color;
+  border-radius: 4px;
+  background-color: #fff;
+}
+
+.checkbox-input:checked+.checkbox-icon {
   background-color: $accent;
   background-image: url(../images/icon-check.svg);
   background-repeat: no-repeat;
