--- a/src/sass/layout/_slider.scss
+++ b/src/sass/layout/_slider.scss
@@ -139,6 +139,8 @@
     background-clip: padding-box;
     border-top: 10px solid transparent;
     border-bottom: 10px solid transparent;
+    
+    transition: all 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:nth-child(1) {
       background-image: url(./../images/slider/1.jpg);
@@ -395,6 +397,8 @@
     border-top: 10px solid transparent;
     border-bottom: 10px solid transparent;
 
+    transition: all 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+
     &:nth-child(1) {
       background-image: url(./../images/slider/1.jpg);
     }
@@ -646,6 +650,8 @@
     background-clip: padding-box;
     border-top: 10px solid transparent;
     border-bottom: 10px solid transparent;
+
+    transition: all 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:nth-child(1) {
       background-image: url(./../images/slider/1.jpg);
