--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -202,32 +202,19 @@
     font-size: 14px;
   }
 
-  // &::before {
-  //   display: block;
-  //   content: '';
-  //   width: 16px;
-  //   height: 15px;
-  //   margin-right: 8px;
+  &::before {
+    display: inline-block;
+    content: '';
+    width: 16px;
+    height: 15px;
+    margin-right: 8px;
 
-  //   border: 1px solid $primary-text-color;
-  //   border-radius: 4px;
-  // }
+    border: 1px solid $primary-text-color;
+    border-radius: 4px;
+  }
 }
 
-.checkbox-icon {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  width: 16px;
-  height: 15px;
-  margin-right: 8px;
-
-  border: 1px solid $primary-text-color;
-  border-radius: 4px;
-  background-color: #fff;
-}
-
-.checkbox-input:checked+.checkbox-icon {
+.checkbox-input:checked+.form-label-checkbox::before {
   background-color: $accent;
   background-image: url(../images/icon-check.svg);
   background-repeat: no-repeat;
