--- a/src/sass/layout/_about-us.scss
+++ b/src/sass/layout/_about-us.scss
@@ -23,6 +23,7 @@
       text-align: center;
       width: 280px;
       box-shadow: -5px 21px 26px rgba(0, 0, 0, 0.04);
+      transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
       // background-color: $white;
 
       &:not(:last-child) {
@@ -31,6 +32,7 @@
       &:hover {
         background-color: $accent;
       }
+
       &:hover .about-us-svg {
         background-color: $accent;
         fill: $white;
@@ -52,6 +54,7 @@
       height: 48px;
       margin-bottom: 20px;
       fill: $accent;
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .low-title {
@@ -118,6 +121,8 @@
       width: calc((100% - 20px) / 2);
       height: 334px;
       box-shadow: -5px 21px 26px rgba(0, 0, 0, 0.04);
+      transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
       // background-color: $white;
       @media screen and (max-width: 1313px) {
         &:nth-child(-n + 4) {
@@ -215,6 +220,8 @@
       width: calc((100% - 20px * 2) / 3);
       height: 396px;
       box-shadow: -5px 21px 26px rgba(0, 0, 0, 0.04);
+      transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
       // background-color: $white;
 
       &:nth-child(-n + 3) {
