--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,14 +1,14 @@
 .menu-button {
-  position:relative;
+  position: relative;
   z-index: 100;
 
-  .icon-close { 
+  .icon-close {
     display: none;
   }
   &.is-open .icon-close {
     display: block;
     position: absolute;
-    
+
     right: 30px;
     top: 30px;
     fill: white;
@@ -22,15 +22,14 @@
   }
 }
 
-
-@media screen and (max-width:727px){
-  .main-header{
+@media screen and (max-width: 727px) {
+  .main-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 90px;
 
-    .header-button{
+    .header-button {
       display: none;
     }
   }
@@ -40,9 +39,9 @@
     position: absolute;
     z-index: 50;
     align-items: center;
-    background: rgba(17, 21, 24, 0.9);;
+    background: rgba(17, 21, 24, 0.9);
     min-width: 100%;
-    min-height: 100%; 
+    min-height: 100%;
 
     top: 0;
     left: 0;
@@ -50,7 +49,6 @@
     &.is-open {
       display: block;
     }
-
 
     .main-nav {
       display: flex;
@@ -61,12 +59,12 @@
       padding-right: 30px;
       padding-left: 30px;
 
-      .list{
+      .list {
         margin-bottom: 50px;
         z-index: 150;
       }
 
-      .link{
+      .link {
         font-family: Montserrat;
         font-style: normal;
         font-weight: 800;
@@ -77,46 +75,45 @@
 
         letter-spacing: 0.03em;
 
-        transform: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
         &:hover,
-        &:focus{
+        &:focus {
           color: $accent;
         }
       }
 
-      .nav-button{
+      .nav-button {
         width: 260px;
         padding: 14px 0;
-        border: 2px solid #FF6B09;
+        border: 2px solid #ff6b09;
       }
     }
   }
 }
 
-@media screen and (min-width:728px){
-  .nav-button{
+@media screen and (min-width: 728px) {
+  .nav-button {
     display: none;
   }
 }
 
-@media screen and (max-width:1353px){
-  .main-header{
+@media screen and (max-width: 1353px) {
+  .main-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 90px;
 
-    .main-button{
+    .main-button {
       display: flex;
       color: $accent;
-      
     }
 
-    .header-button{
+    .header-button {
       width: 260px;
       padding: 14px 0;
-      border: 2px solid #FF6B09;
+      border: 2px solid #ff6b09;
       margin-right: 20px;
     }
   }
@@ -126,9 +123,9 @@
     position: absolute;
     z-index: 50;
     align-items: center;
-    background: rgba(17, 21, 24, 0.9);;
+    background: rgba(17, 21, 24, 0.9);
     min-width: 100%;
-    min-height: 100%; 
+    min-height: 100%;
 
     top: 0;
     left: 0;
@@ -136,7 +133,6 @@
     &.is-open {
       display: block;
     }
-
 
     .main-nav {
       display: flex;
@@ -147,12 +143,12 @@
       padding-right: 30px;
       padding-left: 30px;
 
-      .list{
+      .list {
         margin-bottom: 50px;
         z-index: 150;
       }
 
-      .link{
+      .link {
         font-family: Montserrat;
         font-style: normal;
         font-weight: 800;
@@ -163,10 +159,10 @@
 
         letter-spacing: 0.03em;
 
-        transform: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
         &:hover,
-        &:focus{
+        &:focus {
           color: $accent;
         }
       }
@@ -174,48 +170,46 @@
   }
 }
 
-@media screen and (min-width:1354px){
-  .main-header{
+@media screen and (min-width: 1354px) {
+  .main-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 90px;
   }
-  .main-nav{
-    .list{
+  .main-nav {
+    .list {
       display: flex;
     }
 
-    .item{
-      
-    &:not(:last-child){
-      margin-right: 40px;
+    .item {
+      &:not(:last-child) {
+        margin-right: 40px;
+      }
     }
 
-    }
-
-    .link{
+    .link {
       font-family: Montserrat;
       font-style: normal;
       font-weight: bold;
       font-size: 14px;
       line-height: 17px;
       color: $primary-text-color;
-      transform: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
       &:hover,
-      &:focus{
+      &:focus {
         color: $accent;
       }
     }
   }
-  .header-button{
+  .header-button {
     width: 260px;
     padding: 14px 0;
-    border: 2px solid #FF6B09;
+    border: 2px solid #ff6b09;
   }
-    
-  .nav-button{
+
+  .nav-button {
     display: none;
   }
 }
