добавил фото на фон

--- a/src/sass/layout/_pluses.scss
+++ b/src/sass/layout/_pluses.scss
@@ -31,6 +31,8 @@
   }
   .container-pluses .title {
     text-align: center;
+    font-size: 26px;
+    line-height: 1.3;
   }
   .container-pluses .pluses-list {
     display: flex;
