--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -93,47 +93,57 @@
 }
 
 @media screen and (min-width: 1354px) {
-  .logo {
-    width: 128px;
-    height: 45px;
-  }
-  .upper-section {
-    display: flex;
-    align-items: center;
-    padding-top: 52px;
-    padding-bottom: 53px;
-  }
-  .contact-info {
-    display: flex;
-    align-items: center;
-  }
+  footer{
+    .logo {
+      width: 128px;
+      height: 45px;
+    }
+    .upper-section {
+      display: flex;
+      align-items: center;
+      padding-top: 52px;
+      padding-bottom: 53px;
+    }
+    .contact-info {
+      display: flex;
+      align-items: center;
+    }
+  
+    .contact-info {
+      margin-left: 290px;
+    }
+    .telephone {
+      font-weight: 600;
+      font-size: 30px;
+      line-height: 1.2;
+  
+      letter-spacing: 0.08em;
+      margin-top: 0px;
+      margin-bottom: 0px;
+    }
+    .telephone::after {
+      content: '';
+      height: 40px;
+      width: 1px;
+      margin-left: 16px;
+      margin-right: 24px;
+      background-color: $primary-text-color;
+    }
+    .icon-telephone {
+      width: 30px;
+      height: 29px;
+      margin-right: 15px;
+    }
+    .copyright {
+      text-align: start;
+    }
 
-  .contact-info {
-    margin-left: 290px;
-  }
-  .telephone {
-    font-weight: 600;
-    font-size: 30px;
-    line-height: 1.2;
+    .footer-number{
+      transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    letter-spacing: 0.08em;
-    margin-top: 0px;
-    margin-bottom: 0px;
-  }
-  .telephone::after {
-    content: '';
-    height: 40px;
-    width: 1px;
-    margin-left: 16px;
-    margin-right: 24px;
-    background-color: $primary-text-color;
-  }
-  .icon-telephone {
-    width: 30px;
-    height: 29px;
-    margin-right: 15px;
-  }
-  .copyright {
-    text-align: start;
+      &:hover{
+        color: $accent;
+      }
+    }
   }
 }
