--- a/src/sass/layout/_about-us.scss
+++ b/src/sass/layout/_about-us.scss
@@ -119,7 +119,7 @@
       padding: 40px 22px 24px 22px;
       text-align: center;
       width: calc((100% - 20px) / 2);
-      height: 334px;
+      min-height: 334px;
       box-shadow: -5px 21px 26px rgba(0, 0, 0, 0.04);
       transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -218,7 +218,7 @@
       padding: 40px 22px 24px 22px;
       text-align: center;
       width: calc((100% - 20px * 2) / 3);
-      height: 396px;
+      min-height: 396px;
       box-shadow: -5px 21px 26px rgba(0, 0, 0, 0.04);
       transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -251,6 +251,7 @@
       height: 48px;
       margin-bottom: 30px;
       fill: $accent;
+      transition: all 150ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .low-title {
