--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,18 +1,20 @@
 .menu-button {
-  position:relative;
+  position: relative;
   z-index: 100;
 
-  .icon-close { 
+  .icon-close {
     display: none;
   }
+
   &.is-open .icon-close {
     display: block;
     position: absolute;
-    
+
     right: 30px;
     top: 30px;
     fill: white;
   }
+
   &.is-open .icon-burger {
     z-index: 1;
   }
@@ -23,14 +25,14 @@
 }
 
 
-@media screen and (max-width:727px){
-  .main-header{
+@media screen and (max-width:727px) {
+  .main-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 90px;
 
-    .header-button{
+    .header-button {
       display: none;
     }
   }
@@ -40,9 +42,10 @@
     position: absolute;
     z-index: 50;
     align-items: center;
-    background: rgba(17, 21, 24, 0.9);;
+    background: rgba(17, 21, 24, 0.9);
+    ;
     min-width: 100%;
-    min-height: 100%; 
+    min-height: 100%;
 
     top: 0;
     left: 0;
@@ -61,12 +64,12 @@
       padding-right: 30px;
       padding-left: 30px;
 
-      .list{
+      .list {
         margin-bottom: 50px;
         z-index: 150;
       }
 
-      .link{
+      .link {
         font-family: Montserrat;
         font-style: normal;
         font-weight: 800;
@@ -80,42 +83,42 @@
         transform: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
         &:hover,
-        &:focus{
+        &:focus {
           color: $accent;
         }
       }
 
-      .nav-button{
+      .nav-button {
         width: 260px;
-        padding: 14px 0;
+        // padding: 14px 0;
         border: 2px solid #FF6B09;
       }
     }
   }
 }
 
-@media screen and (min-width:728px){
-  .nav-button{
+@media screen and (min-width:728px) {
+  .nav-button {
     display: none;
   }
 }
 
-@media screen and (max-width:1353px){
-  .main-header{
+@media screen and (max-width:1353px) {
+  .main-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 90px;
 
-    .main-button{
+    .main-button {
       display: flex;
       color: $accent;
-      
+
     }
 
-    .header-button{
+    .header-button {
       width: 260px;
-      padding: 14px 0;
+      // padding: 14px 0;
       border: 2px solid #FF6B09;
       margin-right: 20px;
     }
@@ -126,9 +129,10 @@
     position: absolute;
     z-index: 50;
     align-items: center;
-    background: rgba(17, 21, 24, 0.9);;
+    background: rgba(17, 21, 24, 0.9);
+    ;
     min-width: 100%;
-    min-height: 100%; 
+    min-height: 100%;
 
     top: 0;
     left: 0;
@@ -147,12 +151,12 @@
       padding-right: 30px;
       padding-left: 30px;
 
-      .list{
+      .list {
         margin-bottom: 50px;
         z-index: 150;
       }
 
-      .link{
+      .link {
         font-family: Montserrat;
         font-style: normal;
         font-weight: 800;
@@ -166,7 +170,7 @@
         transform: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
         &:hover,
-        &:focus{
+        &:focus {
           color: $accent;
         }
       }
@@ -174,27 +178,28 @@
   }
 }
 
-@media screen and (min-width:1354px){
-  .main-header{
+@media screen and (min-width:1354px) {
+  .main-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 90px;
   }
-  .main-nav{
-    .list{
+
+  .main-nav {
+    .list {
       display: flex;
     }
 
-    .item{
-      
-    &:not(:last-child){
-      margin-right: 40px;
-    }
+    .item {
+
+      &:not(:last-child) {
+        margin-right: 40px;
+      }
 
     }
 
-    .link{
+    .link {
       font-family: Montserrat;
       font-style: normal;
       font-weight: bold;
@@ -204,18 +209,52 @@
       transform: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
       &:hover,
-      &:focus{
+      &:focus {
         color: $accent;
       }
     }
   }
-  .header-button{
-    width: 260px;
-    padding: 14px 0;
+
+  .header-button {
+    // width: 260px;
+    width: 336px;
+    // padding: 14px 0;
     border: 2px solid #FF6B09;
   }
-    
-  .nav-button{
+
+  .nav-button {
     display: none;
   }
+}
+
+.header-button {
+  padding-left: 13px;
+  padding-top: 14px;
+
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+
+  color: $accent;
+
+  @media screen and (min-width:1354px) {
+    padding: 24px 26px;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 0.14em;
+  }
+}
+
+.nav-button {
+  padding: 14px 12px;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+
+  color: $accent;
 }
