--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -90,7 +90,15 @@
 
       .nav-button {
         width: 260px;
-        // padding: 14px 0;
+        padding: 14px 12px;
+
+        font-weight: 700;
+        font-size: 12px;
+        line-height: 15px;
+        letter-spacing: 0.08em;
+        text-transform: uppercase;
+
+        color: $accent;
         border: 2px solid #FF6B09;
       }
     }
@@ -118,7 +126,17 @@
 
     .header-button {
       width: 260px;
-      // padding: 14px 0;
+      padding-left: 13px;
+      padding-top: 14px;
+
+      font-weight: 700;
+      font-size: 12px;
+      line-height: 1.25;
+
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
+
+      color: $accent;
       border: 2px solid #FF6B09;
       margin-right: 20px;
     }
@@ -216,9 +234,15 @@
   }
 
   .header-button {
-    // width: 260px;
     width: 336px;
-    // padding: 14px 0;
+    padding: 24px 26px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.21;
+    letter-spacing: 0.14em;
+    text-transform: uppercase;
+
+    color: $accent;
     border: 2px solid #FF6B09;
   }
 
@@ -227,34 +251,34 @@
   }
 }
 
-.header-button {
-  padding-left: 13px;
-  padding-top: 14px;
+// .header-button {
+//   padding-left: 13px;
+//   padding-top: 14px;
 
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 15px;
+//   font-weight: 700;
+//   font-size: 12px;
+//   line-height: 15px;
 
-  letter-spacing: 0.08em;
-  text-transform: uppercase;
+//   letter-spacing: 0.08em;
+//   text-transform: uppercase;
 
-  color: $accent;
+//   color: $accent;
 
-  @media screen and (min-width:1354px) {
-    padding: 24px 26px;
-    font-size: 14px;
-    line-height: 17px;
-    letter-spacing: 0.14em;
-  }
-}
+//   @media screen and (min-width:1354px) {
+//     padding: 24px 26px;
+//     font-size: 14px;
+//     line-height: 17px;
+//     letter-spacing: 0.14em;
+//   }
+// }
 
-.nav-button {
-  padding: 14px 12px;
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 15px;
-  letter-spacing: 0.08em;
-  text-transform: uppercase;
+// .nav-button {
+//   padding: 14px 12px;
+//   font-weight: 700;
+//   font-size: 12px;
+//   line-height: 15px;
+//   letter-spacing: 0.08em;
+//   text-transform: uppercase;
 
-  color: $accent;
-}
+//   color: $accent;
+// }
