--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -13,6 +13,10 @@
   padding-top: 30px;
   padding-bottom: 30px;
 }
+.icon-telephone {
+  width: 20px;
+  height: 19px;
+}
 
 .telephone {
   display: flex;
@@ -93,7 +97,7 @@
 }
 
 @media screen and (min-width: 1354px) {
-  footer{
+  footer {
     .logo {
       width: 128px;
       height: 45px;
@@ -108,7 +112,7 @@
       display: flex;
       align-items: center;
     }
-  
+
     .contact-info {
       margin-left: 290px;
     }
@@ -116,7 +120,7 @@
       font-weight: 600;
       font-size: 30px;
       line-height: 1.2;
-  
+
       letter-spacing: 0.08em;
       margin-top: 0px;
       margin-bottom: 0px;
@@ -138,10 +142,10 @@
       text-align: start;
     }
 
-    .footer-number{
+    .footer-number {
       transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-      &:hover{
+      &:hover {
         color: $accent;
       }
     }
