Исправил иконки и индикаторы в слайдере

--- a/src/sass/layout/_slider.scss
+++ b/src/sass/layout/_slider.scss
@@ -394,10 +394,10 @@
     cursor: pointer;
     background-color: red;
     background-clip: padding-box;
-    border-top: 10px solid transparent;
-    border-bottom: 10px solid transparent;
+    // border-top: 10px solid transparent;
+    // border-bottom: 10px solid transparent;
 
-    transition: all 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+    // transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:nth-child(1) {
       background-image: url(./../images/slider/1.jpg);
@@ -648,10 +648,10 @@
     cursor: pointer;
     background-color: red;
     background-clip: padding-box;
-    border-top: 10px solid transparent;
-    border-bottom: 10px solid transparent;
+    // border-top: 10px solid transparent;
+    // border-bottom: 10px solid transparent;
 
-    transition: all 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+    // transition: all 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:nth-child(1) {
       background-image: url(./../images/slider/1.jpg);
@@ -677,7 +677,7 @@
   }
 
   .slider__indicators li.active {
-    border: 1px solid $accent;
+    // border: 1px solid $accent;
   }
 
   /* для стилизации текущего слайдера */
