--- a/src/sass/layout/_register.scss
+++ b/src/sass/layout/_register.scss
@@ -7,17 +7,19 @@
   background-position: center;
   background-size: cover;
   background-image: url(./../images/register/register-mobile.png);
+
   @media screen and (min-device-pixel-ratio: 2),
-    screen and (-webkit-min-device-pixel-ratio: 2),
-    screen and (-o-min-device-pixel-ratio: 2/1),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
+  screen and (-webkit-min-device-pixel-ratio: 2),
+  screen and (-o-min-device-pixel-ratio: 2/1),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
     background-image: url(./../images/register/register-mobile@2x.png);
   }
 }
 
 .register-container {
   text-align: center;
+
   .title-register {
     font-weight: 800;
     font-size: 14px;
@@ -25,6 +27,7 @@
     letter-spacing: 0.03em;
     color: $white;
   }
+
   .text-register {
     font-weight: 600;
     font-size: 12px;
@@ -32,6 +35,7 @@
     letter-spacing: 0.08em;
     color: $white;
   }
+
   .input-register {
     padding-top: 15px;
     padding-bottom: 15px;
@@ -46,6 +50,18 @@
     background: inherit;
     border: 1px solid $white;
     box-sizing: border-box;
+
+    &:focus {
+      outline: none;
+    }
+
+    &:required:focus:valid {
+      border-color: green;
+    }
+
+    &:required:focus:invalid {
+      border-color: red;
+    }
   }
 
   .button {
@@ -59,22 +75,28 @@
     line-height: 1.25;
   }
 }
+
 @media screen and (max-width: 727px) {
   .register-container {
     .title-register {
       margin-bottom: 30px;
     }
+
     .text-register {
       margin-bottom: 30px;
     }
+
     .input-register {
       width: 100%;
     }
+
     .lable-register {
       display: block;
+
       &:nth-child(1) {
         margin-bottom: 20px;
       }
+
       &:nth-child(2) {
         margin-bottom: 50px;
       }
@@ -86,34 +108,41 @@
   .register {
     padding-bottom: 71px;
     background-image: url(./../images/register/register-tablet.png);
+
     @media screen and (min-device-pixel-ratio: 2),
-      screen and (-webkit-min-device-pixel-ratio: 2),
-      screen and (-o-min-device-pixel-ratio: 2/1),
-      screen and (min-resolution: 192dpi),
-      screen and (min-resolution: 2dppx) {
+    screen and (-webkit-min-device-pixel-ratio: 2),
+    screen and (-o-min-device-pixel-ratio: 2/1),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
       background-image: url(./../images/register/register-tablet@2x.png);
     }
+
     .register-container {
       .title-register {
         margin-bottom: 30px;
         font-size: 26px;
         line-height: 1.3;
       }
+
       .text-register {
         margin-bottom: 40px;
         font-size: 14px;
         line-height: 1.21;
       }
+
       .lable-register {
         display: block;
         margin-left: auto;
         margin-right: auto;
+
         &:nth-child(1) {
           margin-bottom: 20px;
         }
+
         &:nth-child(2) {
           margin-bottom: 31px;
         }
+
         .input-register {
           width: 390px;
         }
@@ -128,34 +157,41 @@
     padding-bottom: 62px;
     max-width: 1680px;
     background-image: url(./../images/register/register-desktop.png);
+
     @media screen and (min-device-pixel-ratio: 2),
-      screen and (-webkit-min-device-pixel-ratio: 2),
-      screen and (-o-min-device-pixel-ratio: 2/1),
-      screen and (min-resolution: 192dpi),
-      screen and (min-resolution: 2dppx) {
+    screen and (-webkit-min-device-pixel-ratio: 2),
+    screen and (-o-min-device-pixel-ratio: 2/1),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
       background-image: url(./../images/register/register-desktop@2x.png);
     }
+
     .register-container {
       .title-register {
         margin-bottom: 50px;
         font-size: 46px;
         line-height: 1.3;
       }
+
       .text-register {
         margin-bottom: 56px;
         font-size: 30px;
         line-height: 1.233;
       }
+
       .lable-register {
         display: block;
         margin-left: auto;
         margin-right: auto;
+
         &:nth-child(1) {
           margin-bottom: 30px;
         }
+
         &:nth-child(2) {
           margin-bottom: 80px;
         }
+
         .input-register {
           width: 478px;
           padding-top: 23px;
@@ -166,6 +202,7 @@
           line-height: 1.214;
         }
       }
+
       .button {
         margin-left: auto;
         margin-right: auto;
