Сделаны картинки и анимации в слайдере

--- a/src/sass/layout/_slider.scss
+++ b/src/sass/layout/_slider.scss
@@ -137,10 +137,10 @@
     cursor: pointer;
     background-color: red;
     background-clip: padding-box;
-    border-top: 10px solid transparent;
-    border-bottom: 10px solid transparent;
+    // border-top: 10px solid transparent;
+    // border-bottom: 10px solid transparent;
     
-    transition: all 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+    // transition: all 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:nth-child(1) {
       background-image: url(./../images/slider/1.jpg);
@@ -394,10 +394,10 @@
     cursor: pointer;
     background-color: red;
     background-clip: padding-box;
-    border-top: 10px solid transparent;
-    border-bottom: 10px solid transparent;
+    // border-top: 10px solid transparent;
+    // border-bottom: 10px solid transparent;
 
-    transition: all 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+    // transition: all 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:nth-child(1) {
       background-image: url(./../images/slider/1.jpg);
@@ -648,10 +648,10 @@
     cursor: pointer;
     background-color: red;
     background-clip: padding-box;
-    border-top: 10px solid transparent;
-    border-bottom: 10px solid transparent;
+    // border-top: 10px solid transparent;
+    // border-bottom: 10px solid transparent;
 
-    transition: all 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+    // transition: all 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:nth-child(1) {
       background-image: url(./../images/slider/1.jpg);
